<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/environmentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/review_form_title"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/reject_items"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/score_items"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <ViewStub
                    android:id="@+id/layout_cardview_review_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <!--                <include layout="@layout/cardview_review_content" />-->

                <!--                <include layout="@layout/cardview_review_content" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="200dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bt_preview"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:text="预览" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bt_pdf"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:text="生成PDF" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>